# wr3d

./: Cargo.toml  README.md  build.rs
src/: camera.rs  main.rs  material.rs  mesh.rs  shader.frag  shader.vert  state.rs  texture.rs  vertex.rs
