[package]
name = "wr3d"
version = "0.1.0"
authors = ["Dan <igaryhe@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.23.0"
wgpu = "0.6.2"
glam = "0.11.0"
image = "0.23.12"
anyhow = "1.0.34"
async-std = { version = "1.7.0", features = ["attributes"]}
bytemuck = { version = "1.4.1", features = [ "derive" ] }
tobj = "2.0.2"

[build-dependencies]
shaderc = "0.7.0"
anyhow = "1.0.34"
glob = "0.3.0"
